# libsodium-ffi

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
src/: Makefile  lib.rs
