[package]
name = "libsodium-ffi"
version = "0.2.2"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]
links = "sodium"
build = "build.rs"
license = "MIT/ISC"
repository = "https://github.com/zonyitoo/libsodium-ffi"
description = "Native bindings (FFI) to the libsodium library"
edition = "2018"

[lib]
name = "libsodium_ffi"

[build-dependencies]
vcpkg = "0.2"
pkg-config = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "0.5"
unwrap = "1.2"
bindgen = "0.52"
curl = "0.4"
